--- a/docker/Dockerfile.amd64
+++ b/docker/Dockerfile.amd64
@@ -2,26 +2,20 @@ FROM python:3.9-slim
 
 WORKDIR /app
 
-# 系统依赖
+# 安装系统依赖
 RUN apt-get update && apt-get install -y \
     libgl1-mesa-glx \
     libglib2.0-0 \
     && rm -rf /var/lib/apt/lists/*
 
-# 升级 pip
-RUN python -m pip install --upgrade pip
+# 升级 pip 并安装依赖
+RUN python -m pip install --upgrade pip && \
+    pip install --no-cache-dir torch torchvision --index-url https://download.pytorch.org/whl/cpu && \
+    pip install --no-cache-dir ultralytics redis label-studio-ml
 
-# 分步安装依赖
-RUN pip install --no-cache-dir torch torchvision --index-url https://download.pytorch.org/whl/cpu
-RUN pip install --no-cache-dir ultralytics
-RUN pip install --no-cache-dir redis
-RUN pip install --no-cache-dir label-studio-ml
+# 创建模型目录并复制文件
+COPY model_service /app/model_service/
+COPY models /root/model/
 
-# 复制模型和服务文件
-COPY model_service /app/model_service
-COPY models /root/model
-
-# 初始化服务
-RUN python -m label_studio_ml.server init model_service
-
-CMD [ "python", "-m", "label_studio_ml.server", "start", "model_service", "--port", "9090", "--host", "0.0.0.0" ]
+# 启动服务（移除初始化步骤）
+CMD [ "python", "-m", "label_studio_ml.server", "start", "/app/model_service", "--port", "9090", "--host", "0.0.0.0" ]
